Prevent sorting table from being rendered if the sidebar is collapsed

--- a/app/components/UI/Tooltip.scss
+++ b/app/components/UI/Tooltip.scss
@@ -52,7 +52,6 @@
   color: $white-font-color !important;
   font-family: Metric;
   border-radius: 10px;
-  padding: 2px;
 
   h2 {
     margin: 5px !important;
